[gd_scene load_steps=18 format=3 uid="uid://codyys3sikh3v"]

[ext_resource type="PackedScene" uid="uid://ch72lgn35p8l" path="res://assets/free_car_lowpoly/FREE_CAR_01.fbx" id="1_yiem6"]
[ext_resource type="Script" path="res://scenes/car_01/Car01.gd" id="2_0ruqj"]
[ext_resource type="PackedScene" uid="uid://cp1l3rohtd5b7" path="res://scenes/state_machine/StateMachine.tscn" id="3_4jn1c"]
[ext_resource type="Script" path="res://scenes/car_01/ForwardState.gd" id="4_twpqr"]
[ext_resource type="Script" path="res://scenes/car_01/ReverseState.gd" id="5_os0vf"]
[ext_resource type="Script" path="res://scenes/car_01/CollisionState.gd" id="6_5so5s"]
[ext_resource type="PackedScene" uid="uid://4liamcly4xhm" path="res://scenes/proximity_sensor/ProximitySensorArray.tscn" id="6_klube"]
[ext_resource type="PackedScene" uid="uid://buvwmt777w52t" path="res://scenes/collision_sensor/CollisionDetectionSensor.tscn" id="7_ihymp"]
[ext_resource type="AudioStream" uid="uid://buq2qnh5bhtx8" path="res://assets/sfx/beep-313342.mp3" id="9_psvjl"]
[ext_resource type="AudioStream" uid="uid://b0koe6r8d12fy" path="res://assets/sfx/car-crash-211710.mp3" id="10_xrm00"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_pyex0"]
transparency = 1
cull_mode = 1
albedo_color = Color(1, 1, 1, 0.0392157)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_n8kbm"]
transparency = 1
albedo_color = Color(1, 1, 1, 0)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ow4gn"]
transparency = 1
albedo_color = Color(1, 1, 1, 0)

[sub_resource type="BoxShape3D" id="BoxShape3D_il7yj"]
size = Vector3(2.055, 1.525, 3.21)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_fs8di"]
albedo_color = Color(0.165656, 0.165656, 0.165656, 1)

[sub_resource type="BoxMesh" id="BoxMesh_r2vmo"]

[sub_resource type="ViewportTexture" id="ViewportTexture_yir5o"]
viewport_path = NodePath("Cameras/SubViewportRear")

[node name="Car01" instance=ExtResource("1_yiem6")]
collision_mask = 3
mass = 100.0
center_of_mass_mode = 1
center_of_mass = Vector3(0, 0.4, 0)
script = ExtResource("2_0ruqj")

[node name="car body" parent="." index="0"]
transform = Transform3D(100, 0, 0, 0, -4.37114e-06, 100, 0, -100, -4.37114e-06, 0, 0, 0.0804537)

[node name="windows" parent="car body" index="0"]
transparency = 1.0
surface_material_override/0 = SubResource("StandardMaterial3D_pyex0")

[node name="win door r_001" parent="car body/door r" index="0"]
surface_material_override/0 = SubResource("StandardMaterial3D_n8kbm")

[node name="win door l_001" parent="car body/door l" index="0"]
surface_material_override/0 = SubResource("StandardMaterial3D_ow4gn")

[node name="CollisionShape3D" type="CollisionShape3D" parent="." index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.04554, 0)
shape = SubResource("BoxShape3D_il7yj")

[node name="StateMachine" parent="." index="2" instance=ExtResource("3_4jn1c")]

[node name="ForwardState" type="Node" parent="StateMachine" index="0" node_paths=PackedStringArray("car")]
script = ExtResource("4_twpqr")
car = NodePath("../..")

[node name="ReverseState" type="Node" parent="StateMachine" index="1" node_paths=PackedStringArray("car")]
script = ExtResource("5_os0vf")
car = NodePath("../..")

[node name="CollisionState" type="Node" parent="StateMachine" index="2" node_paths=PackedStringArray("car")]
script = ExtResource("6_5so5s")
car = NodePath("../..")

[node name="Wheel1" type="VehicleWheel3D" parent="." index="3"]
transform = Transform3D(1.20514, 0, 0, 0, 1, 0, 0, 0, 1, 1.14015, 0.41738, 1.12409)
use_as_traction = true
use_as_steering = true
wheel_roll_influence = 1.0
wheel_radius = 0.3
wheel_friction_slip = 1.0
suspension_stiffness = 25.0

[node name="Wheel2" type="VehicleWheel3D" parent="." index="4"]
transform = Transform3D(1.20514, 0, 0, 0, 1, 0, 0, 0, 1, 1.14015, 0.41738, -1.15527)
use_as_traction = true
wheel_roll_influence = 1.0
wheel_radius = 0.3
wheel_friction_slip = 1.0
suspension_stiffness = 25.0

[node name="Wheel3" type="VehicleWheel3D" parent="." index="5"]
transform = Transform3D(1.20514, 0, 0, 0, 1, 0, 0, 0, 1, -1.14015, 0.41738, 1.12409)
use_as_traction = true
use_as_steering = true
wheel_roll_influence = 1.0
wheel_radius = 0.3
wheel_friction_slip = 1.0
suspension_stiffness = 25.0

[node name="Wheel4" type="VehicleWheel3D" parent="." index="6"]
transform = Transform3D(1.20514, 0, 0, 0, 1, 0, 0, 0, 1, -1.14015, 0.41738, -1.15527)
use_as_traction = true
wheel_roll_influence = 1.0
wheel_radius = 0.3
wheel_friction_slip = 1.0
suspension_stiffness = 25.0

[node name="ProximitySensorArray" parent="." index="7" instance=ExtResource("6_klube")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.25616)

[node name="VisualDisplayInterface" type="MeshInstance3D" parent="." index="8"]
transform = Transform3D(0.635, 0, 0, 0, 0.277, 0, 0, 0, 0.039, -0.0996118, 1.19337, 0.616846)
material_override = SubResource("StandardMaterial3D_fs8di")
mesh = SubResource("BoxMesh_r2vmo")

[node name="Sprite3D" type="Sprite3D" parent="VisualDisplayInterface" index="0"]
transform = Transform3D(0.18433, 0, 0, 0, 0.165224, 0, 0, 0, 1, -0.00282037, 0.0360355, -0.596747)
texture = SubResource("ViewportTexture_yir5o")

[node name="Cameras" type="Node3D" parent="." index="9"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -4.68762, 0)

[node name="SubViewportRear" type="SubViewport" parent="Cameras" index="0"]

[node name="Camera3DRear" type="Camera3D" parent="Cameras/SubViewportRear" index="0"]
transform = Transform3D(0.999722, -0.000144906, -0.0235868, 0, 0.999981, -0.00614339, 0.0235873, 0.00614168, 0.999703, -0.0555706, 0.85315, -1.72057)
current = true

[node name="Camera3DInside" type="Camera3D" parent="Cameras" index="1"]
transform = Transform3D(-0.997119, 0.00278221, 0.0758038, 0, 0.999327, -0.0366781, -0.0758549, -0.0365724, -0.996448, 0.337236, 6.02292, -0.247986)
current = true

[node name="Camera3DSide" type="Camera3D" parent="Cameras" index="2"]
transform = Transform3D(0.00604445, -0.121077, 0.992624, 0, 0.992643, 0.121079, -0.999981, -0.000731857, 0.00599999, 7.67391, 6.52291, -0.402874)

[node name="Camera3DTop" type="Camera3D" parent="Cameras" index="3"]
transform = Transform3D(-0.0114456, -0.999768, 0.0182473, 0, 0.0182485, 0.999833, -0.999935, 0.0114437, -0.000208865, 0.15987, 17.3639, -0.0920957)

[node name="RemoteTransform3D" type="RemoteTransform3D" parent="Cameras" index="4"]
transform = Transform3D(0.999722, -0.000144906, -0.0235868, 0, 0.999981, -0.00614339, 0.0235873, 0.00614168, 0.999703, -0.0555706, 5.54077, -1.72057)
remote_path = NodePath("../SubViewportRear/Camera3DRear")

[node name="CollisionDetectionSensor" parent="." index="10" instance=ExtResource("7_ihymp")]
collision_layer = 0

[node name="AlarmSFXPlayer" type="AudioStreamPlayer3D" parent="." index="11"]
stream = ExtResource("9_psvjl")
max_db = -1.0

[node name="CrashSFXPlayer" type="AudioStreamPlayer3D" parent="." index="12"]
stream = ExtResource("10_xrm00")
max_db = 0.0
pitch_scale = 0.8
max_polyphony = 2
